--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -11,7 +11,7 @@
       <button type="submit">Sign Up</button>
     </fieldset>
   </form>
-  <div>
+  <div class="belowForm">
     Already Have An Account? <a href="{% url 'login' %}">Sign In</a>
   </div>
 </div>
