--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a href="{% url 'login' %}"><li>LOGIN</li></a>
             <a href="{% url 'staff_home' %}"><li>STAFF LOGIN</li></a>
             {% endif %}
-            <a href="#"><li>ABOUT US</li></a>
+            <a href="{% url 'about' %}"><li>ABOUT US</li></a>
             <a href="#"><li>CONTACT</li></a>
             <a href="{% url 'blogArchive' %}"><li>ARCHIVED BLOGS</li></a>
             <a href="{% url 'feed' %}"><li>RECENT BLOGS</li></a>
@@ -37,9 +37,9 @@
           <nav class="socialLinks">
             <p>© 2020 All rights reserved</p>
             <ul>
-              <a href="#"><li><img border="0" alt="twitter share link" src="{% static 'images/twitterLogo.png' %}" width="20" height="20"/></li></a>
-              <a href="#"><li><img border="0" alt="instagram share link" src="{% static 'images/instagramLogo.png' %}" width="20" height="20"/></li></a>
-              <a href="#"><li><img border="0" alt="facebook share link" src="{% static 'images/facebookLogo.png' %}" width="20" height="20"/></li></a>
+              <a href="https://twitter.com/Alexhart50Alex"><li><img border="0" alt="twitter share link" src="{% static 'images/twitterLogo.png' %}" width="20" height="20"/></li></a>
+              <a href="https://www.instagram.com/alex_j_hart/"><li><img border="0" alt="instagram share link" src="{% static 'images/instagramLogo.png' %}" width="20" height="20"/></li></a>
+              <a href="https://www.facebook.com/alex.hart.1044186/"><li><img border="0" alt="facebook share link" src="{% static 'images/facebookLogo.png' %}" width="20" height="20"/></li></a>
               <a href="#"><li><img border="0" alt="email share link" src="{% static 'images/mailLogo.png' %}" width="20" height="20"/></li></a>
             </ul>
           </nav>
