--- a/templates/staff/staff_profile.html
+++ b/templates/staff/staff_profile.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
 <h1>{{ user.username }}</h1>
-<a href="{% url 'author_posts' user.username %}">My Posts</a>
 
-{%endblock%}
+{% endblock content %}
