added s3 for profile pictures

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a href="{% url 'staff_home' %}"><li>STAFF LOGIN</li></a>
             <a href="{% url 'login' %}"><li>LOGIN</li></a>
             {% endif %}
-            <a href="#"><li>PROFILE</li></a>
+            <a href="{% url 'profilePage' %}"><li>PROFILE</li></a>
             <a href="{% url 'about' %}"><li>ABOUT US</li></a>
             <a href="{% url 'blogArchive' %}"><li>ARCHIVED BLOGS</li></a>
             <a href="{% url 'feed' %}"><li>RECENT BLOGS</li></a>
