--- a/templates/staff/editor_posts.html
+++ b/templates/staff/editor_posts.html
@@ -8,7 +8,7 @@
         <h2>{{ post.title }}</h2>
         <p>{{ post.author }} | {{ post.created_on}} </p>
         <p>{{post.content|slice:":200" }}</p>
-				<a href="#"><button type="button">Update</button></a>
+				<a href="{% url 'editor_update_post' post.slug %}"><button type="button">Update</button></a>
       </div>
     </div>
     {% endfor %}
