--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -10,7 +10,7 @@
           <p>{{ object.content | safe |linebreaksbr}}</p>
         </div>
         <div class="authorbarContainer">
-              <p>{{ post.author }}</p>
+              <p>{{ post.author_name }}</p>
               <p>{{ post.created_on }}</p>
         </div>
       </div>
