--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,7 +6,7 @@
       <div class="interiorMargin">
         <div>
           <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
-          <p class="fadeText">{{ post.author }} | {{ post.created_on }}</p>
+          <p class="fadeText">{{ post.author_name }} | {{ post.created_on }}</p>
           <p>{{ object.content | safe |linebreaksbr}}</p>
         </div>
         <div class="authorbarContainer">
