--- a/templates/staff/post_review.html
+++ b/templates/staff/post_review.html
@@ -6,7 +6,7 @@
     <div class="reducedBlog">
       <div class="interiorMargin">
         <h2>{{ post.title }}</h2>
-        <p>{{ post.author }} | {{ post.created_on}} </p>
+        <p>{{ post.author }} | {{ post.updated_on}} </p>
         <p>{{post.content|slice:":200" }}</p>
 				<a href="{% url 'post_detail' post.slug %}"><button type="button">Read more</button></a>
       </div>
