--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -39,14 +39,18 @@
     </div>
     <!-- END EXISTING COMMENTS -->
     <!-- CREATE NEW COMMENT -->
-    <div class=createComment style="text-align: center;">
-    <h3>Leave a comment</h3>
-    <form method="post">
-      {{ comment_form.as_p }}
-      {% csrf_token %}
-      <button type="submit">Post</button>
-    </form>
-    </div>
+    {% if  request.user.is_authenticated %}
+      <div class=createComment style="text-align: center;">
+      <h3>Leave a comment</h3>
+      <form method="post">
+        {{ comment_form.as_p }}
+        {% csrf_token %}
+        <button type="submit">Post</button>
+      </form>
+      </div>
+    {% else %}
+      <h3>You must be logged in to post comments</h3>
+    {% endif %}
     <!-- END CREATE NEW COMMENT -->
 </div>
 
