--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,7 +11,7 @@
         </div>
         <div class="authorbarContainer">
               <p>{{ post.author_name }}</p>
-              <p>{{ post.created_on }}</p>
+              <p>{{ post.updated_on }}</p>
         </div>
       </div>
     </div>
