--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,7 +8,7 @@
     <fieldset>
       <legend>Join Today</legend>
       {{ form|crispy  }}
-      <button type="submit">Sign Up</button>
+      <button type="submit">Sign In</button>
     </fieldset>
   </form>
   <div>
